--- a/Comfizen/App.xaml
+++ b/Comfizen/App.xaml
@@ -30,6 +30,7 @@
         <local:MultiValueToArrayConverter x:Key="MultiValueToArrayConverter"/>
         <local:ExpanderCornerRadiusConverter x:Key="ExpanderCornerRadiusConverter"/>
         <local:EqualityConverter x:Key="EqualityConverter" />
+        <local:StringToBoolConverter x:Key="StringToBoolConverter" />
 
         <!-- Color Palette -->
         <SolidColorBrush x:Key="PrimaryBackground" Color="#FF2D2D30"/>
@@ -577,6 +578,10 @@
                     HorizontalAlignment="Left" />
         </DataTemplate>
         
+        <DataTemplate x:Key="NodeBypassTemplate" DataType="{x:Type local:NodeBypassFieldViewModel}">
+            <CheckBox IsChecked="{Binding IsEnabled, Mode=TwoWay}" VerticalAlignment="Center" />
+        </DataTemplate>
+        
         <Style x:Key="LockToggleButtonStyle" TargetType="ToggleButton">
             <Setter Property="Width" Value="24"/>
             <Setter Property="Height" Value="24"/>
@@ -638,6 +643,7 @@
                                      InpaintTemplate="{StaticResource InpaintTemplate}"
                                      MarkdownTemplate="{StaticResource MarkdownTemplate}"
                                      ScriptButtonTemplate="{StaticResource ScriptButtonTemplate}"
+                                     NodeBypassTemplate="{StaticResource NodeBypassTemplate}"
         />
         
         <!-- Style for HORIZONTAL splitters (between rows) -->
